--- a/css/review.css
+++ b/css/review.css
@@ -45,7 +45,7 @@
 
 .review__user:after {
     margin-left: 10px;
-    content: url(/img/icons/socials/vk-blue.png);
+    content: url(./img/icons/socials/vk-blue.png);
     height: 29px;
 }
 
