--- a/css/welcome.css
+++ b/css/welcome.css
@@ -1,12 +1,12 @@
 .wrapper--bg--welcome {
-    background: url(/img/bg/screen.jpg) center no-repeat;
+    background: url(./img/bg/screen.jpg) center no-repeat;
     overflow: hidden;
     min-width: 1150px;
     background-size: cover;
 }
 
 .welcome {
-    background: url(/img/decor/shades.png) center  no-repeat;
+    background: url(./img/decor/shades.png) center  no-repeat;
     width: 100%;
     display: flex;
     justify-content: center;
