--- a/css/section.css
+++ b/css/section.css
@@ -27,5 +27,5 @@
     content: "";
     height: 27px;
     width: 20px;
-    background-image: url(/img/icons/flame.png);
+    background-image: url(./img/icons/flame.png);
 }
