--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');
 @import url('./css/addition.css');
 @import url('./css/normalize.css');
-@import url('../css/header.css');
+@import url('/header.css');
 @import url('./css/hero.css');
 @import url('./css/btn.css');
 @import url('./css/offer.css');
