--- a/css/separator.css
+++ b/css/separator.css
@@ -1,7 +1,7 @@
 .separator{
     display: flex;
     min-height: 360px;
-    background: url(./img/bg/middleline.jpg) center center no-repeat;
+    background: url(../img/bg/middleline.jpg) center center no-repeat;
     background-size: cover;    
 }
 
