--- a/css/socials.css
+++ b/css/socials.css
@@ -20,22 +20,22 @@
 
 .socials__item--icon--telegram .socials__link {
     width: 36px; height: 36px;
-    background: url('./img/icons/socials/css_sprites.png') -10px -66px;
+    background: url('../img/icons/socials/css_sprites.png') -10px -66px;
 }
 
 .socials__item--icon--vk .socials__link {
     width: 36px; height: 36px;
-    background: url('./img/icons/socials/css_sprites.png') -66px -66px;
+    background: url('../img/icons/socials/css_sprites.png') -66px -66px;
 }
 
 .socials__item--icon--fb .socials__link {
     width: 36px; height: 36px;
-    background: url('./img/icons/socials/css_sprites.png') -10px -10px;
+    background: url('../img/icons/socials/css_sprites.png') -10px -10px;
 }
 
 .socials__item--icon--insta .socials__link {
     width: 36px; height: 36px;
-    background: url('./img/icons/socials/css_sprites.png') -66px -10px;
+    background: url('../img/icons/socials/css_sprites.png') -66px -10px;
 }
 
  .socials__link:hover {
